# flash-todo

./: README.md  flash-todo.py  flash_todo.py  pyproject.toml
src/: Task.py  TaskManager.py  TerminalUI.py
